UIEXT-1491: Final touches to choices-related widgets API
UIEXT-1491 (Refine ChoicesWidget API)